# TPM2_Geom

./: .gitmodules  CMakeLists.txt  README.md
libs/glad/: glad.c  glad.h
src/: Application.cpp  Application.h  AxisMesh.cpp  AxisMesh.h  Camera.cpp  Camera.h  Drawable.cpp  Drawable.h  OpenMeshUtils.cpp  OpenMeshUtils.h  RayUtils.cpp  RayUtils.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TriMesh.cpp  TriMesh.h  main.cpp  mesh_fonction_propagator.cpp  mesh_fonction_propagator.h  myApp.cpp  myApp.h
src/Shader/: colorV.shader  pointF.shader  pointV.shader  simpleF.shader  simpleG.shader  simpleV.shader
